Fix whitespace at top

--- a/src/legacy.css
+++ b/src/legacy.css
@@ -120,10 +120,9 @@ iframe {
     Flexbox Gallery
    ---------------- */
 main{
-    margin: 3% 0%; 
+    margin: 2% 0%; 
     width: auto;
     float: none;
-    padding-top: 6rem; /* reserve space for fixed header */
 }
 .flexcontainer{
     display: flex;
